# -001-Timeline-App

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: dmx.rs  engine.rs  interpolation.rs  lib.rs  main.rs  osc.rs  serial.rs  types.rs
src/components/: LogPanel.tsx  PropertiesPanel.tsx  SequenceList.tsx  SettingsModal.tsx  TabBar.tsx  Toolbar.tsx
src/components/timeline/: TimelineCanvas.tsx
src/lib/: audio.ts  constants.ts  i18n.ts  interpolation.ts  projectDirty.ts  utils.ts
src/store/: index.ts
src/types/: index.ts
