[package]
name = "eevee"
version = "0.1.1"
description = "Eevee — Timeline Sequencer"
authors = ["you"]
edition = "2021"

[lib]
name = "eevee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spin_sleep = "1"
rosc = "0.10"
serialport = "4"
